# m17-reflector

./: Cargo.toml  README.md  config.toml.dist
src/: api.rs  callsign.rs  config.rs  control.rs  crc.rs  lib.rs  main.rs  module.rs  packet.rs  peer.rs  reflector.rs  router.rs  server.rs  state.rs  ws.rs
systemd/: m17-reflector.service
web/: index.html  modules.html
web/static/js/: common.js  index.js  modules.js
