[package]
name = "m17_reflector"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.9.2"
log = "0.4"
env_logger = "0.11.8"
thiserror = "2.0.12"             # Error handling
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8.4", features = ["ws"] }
futures = "0.3.31"
serde_json = "1.0.141"
tower = "0.5.2"
